[project]
name = "mqtt-mcp"
version = "0.1.0"
description = "A Model Context Protocol (MCP) server for MQTT"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.3.4",
    "paho-mqtt>=2.1.0",
]

[project.scripts]
mqtt-mcp = "mqtt_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pylint>=3.3.7",
    "pytest>=8.3.5",
]
