[project]
name = "pydantic-mcp-example"
version = "0.1.6"
description = "PydanticAI MCP example"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic-ai-slim[mcp,openai]>=1.89.1",
]

[dependency-groups]
dev = [
    "mqtt-mcp>=0.2.0",
    "pre-commit>=4.6.0",
    "ruff>=0.15.12",
]
